Modified: repositories page

--- a/_config.yml
+++ b/_config.yml
@@ -4,15 +4,15 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Sig
-middle_name: 
+middle_name: O.
 last_name: Janoska-Bedi
 email: sbedi@wisc.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Software Engineer. Classicist. Social Scientist.
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-keywords: jekyll, signebedi  # add your own keywords or leave empty
+# footer_text: >
+#   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+#   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
+keywords: jekyll, signebedi, classics, social-science, computer-science, software-enginnering  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
