--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - signebedi
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - libreForms/libreForms=flask
+  - signebedi/gptty
+  - signebedi/Flask-Signing
+  - signebedi/wiki-flask
+  - signebedi/coliseum
+  - signebedi/mercutio
