--- a/_config.yml
+++ b/_config.yml
@@ -297,8 +297,10 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['meta', 'institutions', 'classics', 'code'] # these tags will be displayed on the front page of your blog
-display_categories: ['updates', 'notes', 'reflections'] # these categories will be displayed on the front page of your blog
+# display_tags: ['meta', 'institutions', 'classics', 'code'] # these tags will be displayed on the front page of your blog
+display_tags: ['meta', 'code'] # these tags will be displayed on the front page of your blog
+# display_categories: ['updates', 'notes', 'reflections'] # these categories will be displayed on the front page of your blog
+display_categories: ['updates'] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
