--- a/_config.yml
+++ b/_config.yml
@@ -236,7 +236,7 @@ exclude:
   - _posts/2023-07-04-jupyter-notebook.md
   - _posts/2023-07-12-post-bibliography.md
   # - _pages/about.md
-  # - _pages/cv.md
+  - _pages/cv.md
   - _pages/dropdown.md
   - _pages/projects.md
   - _pages/publications.md
