--- a/_config.yml
+++ b/_config.yml
@@ -217,29 +217,11 @@ exclude:
   - _projects/4_project.md
   - _projects/5_project.md
   - _projects/6_project.md
-  - _posts/2015-03-15-formatting-and-links.md
-  - _posts/2015-05-15-images.md
-  - _posts/2015-07-15-code.md
-  - _posts/2015-10-20-disqus-comments.md
-  - _posts/2015-10-20-math.md
-  - _posts/2018-12-22-distill.md
-  - _posts/2020-09-28-github-metadata.md
-  - _posts/2020-09-28-twitter.md
-  - _posts/2021-07-04-diagrams.md
-  - _posts/2022-02-01-redirect.md
-  - _posts/2022-12-10-giscus-comments.md
-  - _posts/2023-03-20-table-of-contents.md
-  - _posts/2023-03-21-tables.md
-  - _posts/2023-04-24-videos.md
-  - _posts/2023-04-25-audios.md
-  - _posts/2023-04-25-sidebar-table-of-contents.md
-  - _posts/2023-05-12-custom-blockquotes.md
-  - _posts/2023-07-04-jupyter-notebook.md
-  - _posts/2023-07-12-post-bibliography.md
+  - ._old_posts
   # - _pages/about.md
   # - _pages/cv.md
   - _pages/dropdown.md
-  - _pages/projects.md
+  # - _pages/projects.md
   - _pages/publications.md
   # - _pages/repositories.md
   - _pages/teaching.md
