--- a/_config.yml
+++ b/_config.yml
@@ -282,7 +282,7 @@ jekyll-archives:
 
 # display_tags: ['meta', 'institutions', 'classics', 'code'] # these tags will be displayed on the front page of your blog
 # display_tags: ['meta', 'code'] 
-display_tags: ['meta'] 
+display_tags: ['meta', 'pedagogy', 'code'] 
 # display_categories: ['updates', 'notes', 'reflections'] # these categories will be displayed on the front page of your blog
 # display_categories: ['updates', 'essays'] 
 display_categories: ['essays'] 
