--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,10 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  teaching:
+    output: true
+    permalink: /teaching/:path/
+
 
 announcements:
   enabled: false
