--- a/_config.yml
+++ b/_config.yml
@@ -175,9 +175,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-  teaching:
-    output: true
-    permalink: /teaching/:path/
 
 
 announcements:
@@ -187,7 +184,7 @@ announcements:
 
 latest_posts:
   enabled: false
-  scrollable: true # adds a vertical scroll bar if there are more than 3 new posts items
+  scrollable: false # adds a vertical scroll bar if there are more than 3 new posts items
   limit: 3 # leave blank to include all the blog posts
 
 # -----------------------------------------------------------------------------
